--- a/src/component/Card/Card-CSS/card.module.css
+++ b/src/component/Card/Card-CSS/card.module.css
@@ -15,18 +15,17 @@
   margin-right: auto;
   outline: 2px solid rgba(255, 255, 255, 0.5);
   transition: box-shadow 0.25s ease, transform 0.25s ease;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.08);
 
 }
 .card:last-child {
   margin-bottom: 1rem;
 }
-.card:hover {
-  transform: translateY(-2px);
-}
+
 .dark {
   background-color: rgba(0, 0, 0, 0.454);
   color: white;
-  border: 1px solid white;
+  outline: 1px solid white;
 }
 
 .light {
@@ -103,14 +102,28 @@
   font-size: 14px;
   background: #0a449b;
   border: none;
-  border-radius: 20px;
+  border-radius: 50vw;
   color: white;
+}
+.btn_joined {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px 30px;
+  height: 20px;
+  width: 20px;
+  font-size: 14px;
+  background: white;
+  border: 2px solid black;
+  border-radius: 50vw;
+  color: black;
 }
 
 .bubble_btn {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .div_like_comment_share,
@@ -174,6 +187,13 @@
   overflow-wrap: break-word; /* modern */
   word-break: break-word;
   line-height: 1.5;
+}
+.sideCardWrapper {
+  position: relative;
+  top: -1rem;
+  right: -50px;
+  z-index: 1000;
+
 }
 
 @media screen and (max-width: 576px) {
